# scholaraio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_CN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  README_CN.md  clawhub.yaml  config.local.example.yaml  config.yaml  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/academic-writing/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/bioinformatics/: SKILL.md
.claude/skills/citation-check/: SKILL.md
.claude/skills/citations/: SKILL.md
.claude/skills/draw/: SKILL.md
.claude/skills/enrich/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/export/: SKILL.md
.claude/skills/graph/: SKILL.md
.claude/skills/import/: SKILL.md
.claude/skills/index/: SKILL.md
.claude/skills/ingest/: SKILL.md
.claude/skills/ingest-link/: SKILL.md
.claude/skills/insights/: SKILL.md
.claude/skills/literature-review/: SKILL.md
.claude/skills/metrics/: SKILL.md
.claude/skills/openfoam/: SKILL.md
.claude/skills/paper-writing/: SKILL.md
.claude/skills/poster/: SKILL.md
.claude/skills/rename/: SKILL.md
.claude/skills/research-gap/: SKILL.md
.claude/skills/review-response/: SKILL.md
.claude/skills/scientific-tool-onboarding/: SKILL.md
.claude/skills/search/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/show/: SKILL.md
.claude/skills/technical-report/: SKILL.md
.claude/skills/topics/: SKILL.md
.claude/skills/workspace/: SKILL.md
.claude/skills/writing-polish/: SKILL.md
.github/workflows/: ci.yml
.qwen/: .gitignore  QWEN.md
docs/: index.md
docs/getting-started/: agent-setup.md  configuration.md  installation.md
docs/guide/: cli-reference.md  ingestion.md  webtools-integration.md  writing.md
docs/project-analysis/: 04-ux-retention-acquisition.md
hooks/: hooks.json
scholaraio/: __init__.py  citation_styles.py  cli.py  config.py  document.py  explore.py  export.py  index.py  loader.py  mcp_server.py  metrics.py  setup.py  toolref.py  translate.py  vectors.py  workspace.py
scholaraio/ingest/: extractor.py  mineru.py  parser_matrix_benchmark.py  pdf_fallback.py  pipeline.py  proceedings.py
scholaraio/sources/: arxiv.py  webtools.py
scholaraio/toolref/: __init__.py  _legacy_snapshot.py  constants.py  fetch.py  indexing.py  manifest.py  parsers.py  paths.py  search.py  storage.py
scripts/: check-deps.sh
tests/: conftest.py  test_academic_writing_skills.py  test_arxiv_source.py  test_audit.py  test_cli_messages.py  test_config.py  test_export.py  test_export_extended.py  test_federated_search.py  test_index.py  test_ingest_link_cli.py  test_ingest_pipeline.py  test_loader.py  test_mcp_server.py  test_metadata_api.py  test_metadata_models.py  test_metrics.py  test_mineru.py  test_papers.py  test_parser_matrix_benchmark.py  test_pdf_fallback.py  test_pipeline_mineru.py  test_proceedings.py  test_setup.py  test_skill_routing_smoke.py  test_toolref.py  test_translate.py  test_vectors.py  test_workspace.py  test_writer.py  test_writing_docs_alignment.py
(+8 files in other folders)
