[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "scholaraio"
version = "0.1.0"
description = "Scholar All-In-One — local academic literature explorer powered by AI"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Zimo Liao", email = "zimoliao@mail.ustc.edu.cn"},
]
keywords = ["academic", "literature", "research", "knowledge-base", "semantic-search", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/zimoliao/scholaraio"
Repository = "https://github.com/zimoliao/scholaraio"
Issues = "https://github.com/zimoliao/scholaraio/issues"

[project.optional-dependencies]
embed = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
]
topics = [
    "scholaraio[embed]",
    "bertopic>=0.16",
    "pandas>=2.0",
]
import = [
    "endnote-utils>=1.0",
    "pyzotero>=1.5",
]
mcp = [
    "mcp>=1.0",
]
full = [
    "scholaraio[embed]",
    "scholaraio[topics]",
    "scholaraio[import]",
    "modelscope>=1.10",
    "curl-cffi>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[project.scripts]
scholaraio = "scholaraio.cli:main"
scholaraio-mcp = "scholaraio.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]

# ---------- ruff ----------
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
    "B905",   # zip strict — Python 3.10 compat
    "UP007",  # X | Y union syntax — keep Optional[] for clarity
]

[tool.ruff.lint.isort]
known-first-party = ["scholaraio"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that need network or heavy computation",
]

# ---------- coverage ----------
[tool.coverage.run]
source = ["scholaraio"]
omit = ["scholaraio/cli.py", "scholaraio/mcp_server.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
